tests/should-fail/typedecl-no-binding.ls
bar :: Int -> Int;

foo x = x + x;
